# nixos-images

./: .gitignore  .mergify.yml  LICENSE  README.md  bors.toml  build-images.sh  flake.nix  garnix.yaml
.github/workflows/: build.yml  update-flake-lock.yml  update-nixos-release.yml
nix/: installer.nix  kernel-packages.nix  kexec-installer-test.nix  kexec-installer.nix  latest-zfs-kernel.nix  log-network-status.nix  networkd.nix  nix-settings.nix  nixos-facter.nix  no-bootloaders.nix  no-grub.nix  noninteractive.nix  noveau-workaround.nix  python-minimal.nix  restore-remote-access.nix  restore_routes.py  serial.nix  setup-etc.c  system-packages.nix  un-pearl.nix  update-users-groups.c  update-users-groups.sh  vga-primary-console.nix  virtual.nix  zfs-minimal.nix
nix/image-installer/: hidden-ssh-announcement.nix  module.nix  tests.nix  tor-ssh.nix  wifi.nix
nix/kexec-installer/: kexec-run.sh  local-network-restore-test.sh  module.nix  network_dynamic_restore.py  network_static_restore.py  nixos.nix  not-os-test.nix  not-os.nix  restore_dynamic.py  restore_routes.py  restore_routes.sh  test.nix
nix/kexec-installer/ssh-keys/: id_ed25519  id_ed25519.pub
nix/netboot-installer/: module.nix
nix/network-status/: .envrc  Cargo.toml  build.rs  default.nix
nix/network-status/src/: main.rs
